--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
-<!DOCTYPE html>
-<html class="" lang="en"><head>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en"><head>
 <meta http-equiv="content-type" content="text/html; charset=UTF-8">
     <meta charset="UTF-8">
     <title>marion-resume</title>
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="marion-resume_files/remodal-default-theme.css">
     <script src="marion-resume_files/jquery.js"></script>
     <script src="marion-resume_files/remodal.js"></script>
-    <script src="marion-resume_files/script.js"></script>
+  <!--   <script src="marion-resume_files/script.js"></script> -->
 <style class="firebugResetStyles" type="text/css" charset="utf-8">/* See license.txt for terms of usage */
 
 /** reset styling **/
